--- a/static/index.html
+++ b/static/index.html
@@ -18,8 +18,8 @@
   <script src="js/ForgeTree.js"></script>
   <script src="js/ForgeViewer.js"></script>
 
-  <script src="js/myawesomeextension.js"></script>
   <script src="js/handleselectionextension.js"></script>
+  <script src="/js/modelsummaryextension.js"></script>
 
 </head>
 <body>
