dashboard and Panel charts done

--- a/static/index.html
+++ b/static/index.html
@@ -13,14 +13,22 @@
   <!-- Autodesk Forge Viewer files -->
   <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css" type="text/css">
   <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.min.js"></script>
+
+  <!--Chart JS  packages-->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" ></script>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" />
+
   <!-- this project files -->
   <link href="css/main.css" rel="stylesheet" />
   <script src="js/ForgeTree.js"></script>
   <script src="js/ForgeViewer.js"></script>
 
-  <script src="js/handleselectionextension.js"></script>
-  <script src="/js/modelsummaryextension.js"></script>
-
+  <script src="/js/handleselectionextension.js"></script>
+  <script src="js/modelsummaryextension.js"></script>
+  <script src="/js/dashboard/Dashboard.js"></script>
+  <script src="js/dashboard/DashboardPanel.js"></script>
+  <script src="js/dashboard/PanelBarChart.js"></script>
+  <script src="js/dashboard/PanelPieChart.js"></script>
 </head>
 <body>
 <!-- Fixed navbar by Bootstrap: https://getbootstrap.com/examples/navbar-fixed-top/ -->
